--- a/kakaotalk_starter/YourCell.xib
+++ b/kakaotalk_starter/YourCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="YourCell" customModule="kakaotalk_starter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="493" height="141"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="yourCell" rowHeight="82" id="KGk-i7-Jjw" customClass="YourCell" customModule="kakaotalk_starter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="493" height="82"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="493" height="141"/>
+                <rect key="frame" x="0.0" y="0.0" width="493" height="82"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="p2" translatesAutoresizingMaskIntoConstraints="NO" id="Z8j-b5-IUH">
@@ -26,25 +26,24 @@
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yourBubble" translatesAutoresizingMaskIntoConstraints="NO" id="LjI-Sg-xhg">
-                        <rect key="frame" x="48" y="8" width="321" height="125"/>
+                        <rect key="frame" x="48" y="8" width="141.5" height="66"/>
                         <rect key="contentStretch" x="0.5" y="0.5" width="0.0" height="0.0"/>
                     </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fzU-eQ-fef">
-                        <rect key="frame" x="68" y="8" width="301" height="125"/>
-                        <string key="text">Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum</string>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Lorem ipsumLorem " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fzU-eQ-fef">
+                        <rect key="frame" x="68" y="13" width="121.5" height="56"/>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020.10.10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bV0-ql-ZVN">
-                        <rect key="frame" x="377" y="121" width="52.5" height="12"/>
+                        <rect key="frame" x="197.5" y="57" width="52.5" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="fzU-eQ-fef" firstAttribute="top" secondItem="LjI-Sg-xhg" secondAttribute="top" id="ABR-Qu-uJf"/>
+                    <constraint firstItem="fzU-eQ-fef" firstAttribute="top" secondItem="LjI-Sg-xhg" secondAttribute="top" constant="5" id="ABR-Qu-uJf"/>
                     <constraint firstItem="LjI-Sg-xhg" firstAttribute="leading" secondItem="Z8j-b5-IUH" secondAttribute="trailing" id="Cum-Qo-DIP"/>
                     <constraint firstItem="Z8j-b5-IUH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="U2l-ju-Cji"/>
                     <constraint firstItem="Z8j-b5-IUH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="WYL-an-fCl"/>
@@ -54,12 +53,15 @@
                     <constraint firstItem="bV0-ql-ZVN" firstAttribute="leading" secondItem="LjI-Sg-xhg" secondAttribute="trailing" constant="8" id="ju5-hc-fOt"/>
                     <constraint firstItem="bV0-ql-ZVN" firstAttribute="bottom" secondItem="fzU-eQ-fef" secondAttribute="bottom" id="mbN-nm-ByY"/>
                     <constraint firstItem="fzU-eQ-fef" firstAttribute="leading" secondItem="LjI-Sg-xhg" secondAttribute="leading" constant="20" id="nBX-Tn-4Bl"/>
-                    <constraint firstItem="fzU-eQ-fef" firstAttribute="bottom" secondItem="LjI-Sg-xhg" secondAttribute="bottom" id="szw-nv-SJX"/>
+                    <constraint firstItem="fzU-eQ-fef" firstAttribute="bottom" secondItem="LjI-Sg-xhg" secondAttribute="bottom" constant="-5" id="szw-nv-SJX"/>
                     <constraint firstItem="fzU-eQ-fef" firstAttribute="trailing" secondItem="LjI-Sg-xhg" secondAttribute="trailing" id="wUf-Ew-mOi"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="261.59420289855075" y="185.15625"/>
+            <connections>
+                <outlet property="inputTextField" destination="fzU-eQ-fef" id="kWG-iJ-bai"/>
+            </connections>
+            <point key="canvasLocation" x="261.59420289855075" y="165.40178571428569"/>
         </tableViewCell>
     </objects>
     <resources>
