--- a/kakaotalk_starter/MyCell.xib
+++ b/kakaotalk_starter/MyCell.xib
@@ -19,24 +19,24 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myBubble" translatesAutoresizingMaskIntoConstraints="NO" id="8Pj-tL-cOx">
-                        <rect key="frame" x="303" y="3" width="103" height="120"/>
+                        <rect key="frame" x="293" y="3" width="103" height="120"/>
                         <rect key="contentStretch" x="0.5" y="0.5" width="0.0" height="0.0"/>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="p1" translatesAutoresizingMaskIntoConstraints="NO" id="CaP-fQ-4Z5">
-                        <rect key="frame" x="411" y="8" width="30" height="30"/>
+                        <rect key="frame" x="401" y="8" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="JgA-IN-OoJ"/>
-                            <constraint firstAttribute="width" constant="30" id="iJ8-SK-Xmu"/>
+                            <constraint firstAttribute="height" constant="40" id="JgA-IN-OoJ"/>
+                            <constraint firstAttribute="width" constant="40" id="iJ8-SK-Xmu"/>
                         </constraints>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="755" verticalHuggingPriority="755" scrollEnabled="NO" text="Lorem ipsum" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eHp-Ra-vo1">
-                        <rect key="frame" x="303" y="8" width="83" height="110"/>
+                        <rect key="frame" x="293" y="8" width="83" height="110"/>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020.10.10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zha-Um-wrW">
-                        <rect key="frame" x="236" y="104.5" width="57" height="13.5"/>
+                        <rect key="frame" x="226" y="104.5" width="57" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -60,6 +60,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="inputTextField" destination="eHp-Ra-vo1" id="ycy-Hk-YmC"/>
+                <outlet property="myImage" destination="CaP-fQ-4Z5" id="Suy-kN-7hh"/>
             </connections>
             <point key="canvasLocation" x="31.159420289855074" y="-68.973214285714278"/>
         </tableViewCell>
