--- a/kakaotalk_starter/YourCell.xib
+++ b/kakaotalk_starter/YourCell.xib
@@ -60,6 +60,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="inputTextField" destination="fzU-eQ-fef" id="kWG-iJ-bai"/>
+                <outlet property="yourImage" destination="Z8j-b5-IUH" id="WLG-Kc-nJg"/>
             </connections>
             <point key="canvasLocation" x="261.59420289855075" y="165.40178571428569"/>
         </tableViewCell>
